--- a/Styles.css
+++ b/Styles.css
@@ -1,21 +1,20 @@
 .header {
-  height: 5%;
+  height: 10%;
   background-color: #233954;
   width: 80%;
-  padding: 2%;
+  padding: 4%;
   color: white;
   font-family:sans-serif
 }
 .h2{
   color: white;
-  width: inherit;
+  width: 30%;
   display: inline;
 }
-#description{
+.description{
   color: white;
   display: inline;
   margin-left: 2%;
-  display: inline;
   font-style: italic;
   font-size: 14;
   font-family: serif;
@@ -27,7 +26,7 @@
   background-color: lightgray;
   width:3%;
   padding-left:15%;
-  padding-top:20%;
+  padding-top:25%;
   float: left;
 }
 .news-content{
@@ -36,7 +35,7 @@
   padding-left:1%;
 }
 .news-container{
-  width: 75%;
+  width: 76%;
   margin:2%;
   float: left;
 }
@@ -82,6 +81,7 @@
   font-size: 14px;
   font-weight: bold;
   padding-top: 2%;
+  display: block;
 }
 .btn-subscribe{
   background-color: #000000;
@@ -90,36 +90,57 @@
   padding: 1%;
   font-family: "Calibri";
   font-weight: bold;
-  width: 8%;
   font-size: 12px;
 }
 .email-address{
-  width: 14%;
   padding: 1%;
   color: #000000;
   font-family: "Calibri";
   font-size: 12px;
   display: inline;
+  width:13%;
 }
 .category-dropdown{
   padding-bottom: 1%;
-  padding-top:2%
+  padding-top:2%;
 }
-#dropdown{
-  width: 20%;
+.dropdown{
   padding: 1%;
   color: #000000;
   font-family: "Calibri";
   font-size: 14px;
+  width:20%;
 }
 .footer {
-  width:96%;
+  width:100%;
   background-color: #233954;
-  margin: 2%;
+  margin-top:2%;
   padding: 2%;
   color: white;
   font-size: 12px;
   text-align: center;
   float: left;
   font-family: sans-serif;
+}
+.custom-popup{
+  display: block;
+  border: 2px solid #aaa;
+  position: fixed;
+  width: 55%;
+  height: 35%;
+  left: 10%;
+  top:30%;
+  padding: 2%;
+  margin: :2%;
+  box-sizing: border-box;
+  border-color: #233954;
+  background-color: White;
+  opacity: 1;
+}
+.right-pane{
+  position: relative;
+  left:20%;
+}
+.left-pane{
+  width: 80%;
 }
