--- a/view/index.html
+++ b/view/index.html
@@ -8,6 +8,6 @@
     <title></title>
   <header>
   </header>
-  <body onload="javascript:GetChannelsInfo()">
+  <body onload="javascript:getChannelsInfo()">
   </body>
 </html>
