--- a/view/index.html
+++ b/view/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/Styles.css" />
-    <script type="text/javascript" src="../js/NewsChannel.js"></script>
-      <script type="text/javascript" src="../js/NewsChannelOperations.js"></script>
-    <title></title>
-  <header>
-  </header>
-  <body onload="javascript:getChannelsInfo()">
-  </body>
+
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="../css/Styles.css">
+    <script type="module" src="../js/NewsController.js"></script>
+    <title>News</title>
+</head>
+
+<!-- All the content in the body is placed from the scriptfile
+On load of the page "Create" function of java script is called to add the required elements -->
+<body>
+    <header id="headerTitle">
+    </header>
+    <main id="wrapper" class="minimumHeight">
+    </main>
+    <footer id="footerTitle" class="footerContent">
+    </footer>
+    </div>
+</body>
+
 </html>
