--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,86 +1,84 @@
 /* Header */
-.titleMain {
-    background: rgb(4, 47, 97);
+.header {
+    height: 1%;
+    background-color: #233954;
+    width: 100%;
+    padding: 1%;
     color: white;
-    height: 80px;
-    margin: 0px; 
-    line-height: 80px;
+    font-family: sans-serif;
 }
 
 .titleHeading {
-    float: left;
-    margin: 0 0 0 20px;
+    float: left; 
+    display: inline;
 }
 
 .titleDesc {
-    float: left;
-    margin: 0 0 0 30px;
+    color: white;
+    display: inline;
+    margin-left: 2%;
+    font-style: italic;
+    font-size: 14px;
+    font-family: serif;
 }
 
 .minimumHeight{
-    min-height: 527px;
+    min-height: 30%;
 }
 
 /* Post */
 .postImage {
     width: 20%;
-    height: 200px;
 }
 
 .postBody {
-    padding-left: 40px;
-}
-
-.postFlx {
-    height: 240px;
-    width: 95%;
-    margin-left: 15px;
-    margin-top: 10px;
+    padding-left: 10%;
 }
 
 .postButton {
-    background: rgb(211, 44, 3);
-    height: 30px;
-    width: 180px;
-    color: white;
-    border:0;
+    background-color: #ed674c;
+    color: aliceblue;
+    display: block;
+    padding: 1%;
+    font-family: "Tahoma";
+    width: 15%;
+  
 }
-
+.spacingWithInPosts {
+    margin: 1% 0 0 1%;
+}
 .divideLine {
-    margin: 10px 0 0 12px;
-    width: 95%;
+    margin: 2% 0 0 3%;
+    width: 100%;
 }
 
-.spacingWithInPosts{
-    margin: 10px 0 0 0 ;
-}
 
 .marginForPost {
-    margin: 5px 0 0 10px ;
+    margin:1% 0 0 1%;
 }
 
 /*category and Subscription */
 .sidePanelStyle {
     width: 25%;
-    margin: 10px 30px 10px 10px;
+    margin: 1% 3% 1% 1%;
 }
 
 .lstBox {
     width: 100%;
-    height: 25px;
+    height: 1%;
 }
 
 .txtBoxMeasures {
     float: left;
     width: 70%;
-    height: 25px;
+    height: 80%;
 }
 
 .btnSubscribe {
     float: left;
     color: white;
     background: black;
-    height: 30px;
+    height: 100%;
     border:0;
     z-index: 20;
 }
@@ -104,7 +102,7 @@
 
 .allPosts {
         width: 95%;
-        margin : 10px 0 0 10px;
+        margin : 1% 0 0 1%;
 }
 
 .fontLight {
@@ -132,7 +130,7 @@
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 10%; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -147,7 +145,7 @@
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1% solid #888;
     width: 80%;
   }
   
